Simplified and centered footer

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,14 +1,11 @@
 .footer {
   margin-top: 2rem;
-}
-
-.navItems {
-  margin-bottom: 1rem;
-  padding: 0;
-  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .navItem {
-  display: inline-block;
+  margin-bottom: 1rem;
   margin-right: 1rem;
 }
