--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -13,7 +13,7 @@ code {
 }
 
 .section-divider {
-  height: 1.5rem;
+  height: 1px;
   background-color: rgba(0, 0, 0, 0.1);
   border: solid rgba(0, 0, 0, 0.15);
   border-width: 1px 0;
