--- a/src/components/login.module.css
+++ b/src/components/login.module.css
@@ -1,21 +1,19 @@
 /* Set min-height to avoid page reflow while session loading */
 .signedInStatus {
-  display: block;
   min-height: 4rem;
-  width: 100%;
 }
 
 .loading,
 .loaded {
-  position: relative;
-  top: 0;
   opacity: 1;
   overflow: hidden;
-  border-radius: 0 0 0.6rem 0.6rem;
-  padding: 0.6rem 1rem;
+  border-radius: 0.6rem 0.6rem;
+  padding: 3rem 3rem;
   margin: 0;
   background-color: rgba(0, 0, 0, 0.05);
   transition: all 0.2s ease-in;
+  display: flex;
+  justify-content: left;
 }
 
 .loading {
@@ -25,26 +23,22 @@
 
 .signedInText,
 .notSignedInText {
-  position: absolute;
-  padding-top: 0.8rem;
-  left: 1rem;
-  right: 6.5rem;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  display: inherit;
   z-index: 1;
   line-height: 1.3rem;
 }
 
 .signedInText {
   padding-top: 0rem;
-  left: 4.6rem;
+  margin-bottom: 1rem;
 }
 
 .avatar {
   border-radius: 2rem;
-  float: left;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
   height: 2.8rem;
   width: 2.8rem;
   background-color: white;
@@ -52,32 +46,15 @@
   background-repeat: no-repeat;
 }
 
-.button,
-.buttonPrimary {
-  float: right;
-  margin-right: -0.4rem;
+.button {
   font-weight: 500;
   border-radius: 0.3rem;
   cursor: pointer;
   font-size: 1rem;
   line-height: 1.4rem;
-  padding: 0.7rem 0.8rem;
-  position: relative;
   z-index: 10;
   background-color: transparent;
   color: #555;
-}
-
-.buttonPrimary {
-  background-color: #346df1;
-  border-color: #346df1;
-  color: #fff;
-  text-decoration: none;
-  padding: 0.7rem 1.4rem;
-}
-
-.buttonPrimary:hover {
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.2);
 }
 
 .navItems {
@@ -89,4 +66,8 @@
 .navItem {
   display: inline-block;
   margin-right: 1rem;
+}
+
+.signedinSmall {
+  margin-bottom: 0.4rem;
 }
